--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "markdown-it-vue": "^1.1.3",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0"
   },
