--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "deploy": "npm run build && rsync -av dist/* deploy@hasselstigen.me:/var/www/me-app.hasselstigen.me/html/"
   },
   "dependencies": {
     "core-js": "^3.6.5",
