--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
+    "test": "mocha 'test/test.js'",
     "lint": "vue-cli-service lint",
-    "deploy": "npm run build && rsync -av dist/* deploy@hasselstigen.me:/var/www/me-app.hasselstigen.me/html/"
+    "deploy": "npm run build && rsync -av dist/* deploy@hasselstigen.me:/var/www/me-app.hasselstigen.me/html/",
+    "clean-all": "rm -rf node_modules"
   },
   "dependencies": {
     "core-js": "^3.6.5",
@@ -22,6 +24,10 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "geckodriver": "^1.20.0",
+    "mocha": "^8.1.3",
+    "nyc": "^15.1.0",
+    "selenium-webdriver": "^3.6.0",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
