--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "core-js": "^3.6.5",
     "markdown-it-vue": "^1.1.3",
     "vue": "^2.6.11",
-    "vue-router": "^3.2.0"
+    "vue-router": "^3.2.0",
+    "geckodriver": "^1.20.0",
+    "chromedriver": "^85.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
@@ -24,7 +26,6 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
-    "geckodriver": "^1.20.0",
     "mocha": "^8.1.3",
     "nyc": "^15.1.0",
     "selenium-webdriver": "^3.6.0",
