--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
     "clean-all": "rm -rf node_modules"
   },
   "dependencies": {
+    "chromedriver": "^85.0.1",
     "core-js": "^3.6.5",
+    "geckodriver": "^1.20.0",
+    "http-server": "^0.12.3",
     "markdown-it-vue": "^1.1.3",
     "vue": "^2.6.11",
-    "vue-router": "^3.2.0",
-    "geckodriver": "^1.20.0",
-    "chromedriver": "^85.0.1"
+    "vue-router": "^3.2.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
