--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "start": "node node_modules/http-server/bin/http-server -p 8082 dist",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "test": "mocha 'test/test.js'",
