Laborating with test2

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "test-command": "mocha 'test/test.js'",
-    "test": "npm start & npm run test-command",
+    "test": "npm start & sleep 5s & npm run test-command",
     "lint": "vue-cli-service lint",
     "deploy": "npm run build && rsync -av dist/* deploy@hasselstigen.me:/var/www/me-app.hasselstigen.me/html/",
     "clean-all": "rm -rf node_modules"
