--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "geckodriver": "^1.20.0",
     "http-server": "^0.12.3",
     "markdown-it-vue": "^1.1.3",
+    "socket.io-client": "^2.3.0",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0"
   },
