--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "me-app",
+  "name": "me-avanza",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,10 +9,11 @@
     "test-command": "mocha 'test/test.js'",
     "test": "npm start & npm run test-command",
     "lint": "vue-cli-service lint",
-    "deploy": "npm run build && rsync -av dist/* deploy@hasselstigen.me:/var/www/me-app.hasselstigen.me/html/",
+    "deploy": "npm run build && rsync -av dist/* deploy@hasselstigen.me:/var/www/avanza.hasselstigen.me/html/",
     "clean-all": "rm -rf node_modules"
   },
   "dependencies": {
+    "chart.js": "^2.9.3",
     "chromedriver": "^85.0.1",
     "core-js": "^3.6.5",
     "geckodriver": "^1.20.0",
@@ -20,6 +21,7 @@
     "markdown-it-vue": "^1.1.3",
     "socket.io-client": "^2.3.0",
     "vue": "^2.6.11",
+    "vue-chartjs": "^3.5.1",
     "vue-router": "^3.2.0"
   },
   "devDependencies": {
